--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 server.port=8189
 server.servlet.context-path=/
 
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_default=false
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=Tickets
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=tickets
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
+
+
